WIP: Record logic in separate file for easier management.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 		
 		<div class="file-drag-drop"
 			onclick="this.querySelector('#videoInput').click();">
-			<div class="file-overlay">
-				Drop file here or click to browse
-			</div>
+			<div class="file-overlay">Drop file here or click to browse</div>
 			<input type="file" id="videoInput" accept="video/*" style="display: none;">
 		</div>
 	</div>
@@ -29,10 +27,16 @@
 	<div id="videoContainer" style="display:none; position:relative;">
 		<div id="titleBar">
 			<p id="videoName" style="margin-right: 35px;">Buffering Video... Please Wait</p>
-			<a id="videoReset" style="cursor: pointer;visibility: hidden;" onclick="ResetToMainMenu()">
-				<svg fill="#FFFFFFFF" width="24px" height="24px" viewBox="0 0 1024.00 1024.00" t="1569683368540" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="9723" xmlns:xlink="http://www.w3.org/1999/xlink" stroke="#FFFFFFFF"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><defs><style type="text/css"></style></defs><path d="M899.1 869.6l-53-305.6H864c14.4 0 26-11.6 26-26V346c0-14.4-11.6-26-26-26H618V138c0-14.4-11.6-26-26-26H432c-14.4 0-26 11.6-26 26v182H160c-14.4 0-26 11.6-26 26v192c0 14.4 11.6 26 26 26h17.9l-53 305.6c-0.3 1.5-0.4 3-0.4 4.4 0 14.4 11.6 26 26 26h723c1.5 0 3-0.1 4.4-0.4 14.2-2.4 23.7-15.9 21.2-30zM204 390h272V182h72v208h272v104H204V390z m468 440V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H416V674c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v156H202.8l45.1-260H776l45.1 260H672z" p-id="9724"></path></g></svg>
-			</a>
-			<a id="recordState" onclick="ToggleRecordState()">[Record Scrub]</a>
+			<div id="videoReset" style="visibility: hidden;">
+				<a class="icontext" onclick="ResetToMainMenu()">	
+					<svg width="18" height="18" viewBox="0 0 256 256"><path d="M25 2a2 2 0 1 0 0 4c10.517 0 19 8.483 19 19s-8.483 19-19 19A18.97 18.97 0 0 1 6 25a18.93 18.93 0 0 1 6-13.855V15a2 2 0 1 0 4 0V4H5a2 2 0 1 0 0 4h4.525C4.907 12.21 2 18.272 2 25c0 12.679 10.321 23 23 23s23-10.321 23-23S37.679 2 25 2" transform="scale(5.12)" fill="#fff" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode:normal"/></svg>
+					Reset Video
+				</a>
+				<a id="recordState" class="icontext" onclick="ToggleRecordState()">
+					<svg width="18" height="18" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg"><circle style="stroke:#000;fill:#ef7575;stroke-width:5px" cx="128" cy="128" r="115.033"/></svg>
+					Record Scrub
+				</a>
+			</div>	
 		</div>
         <canvas id="canvas"></canvas>
         <div id="scrubber"></div>
@@ -40,6 +44,7 @@
     </div>
     
 	<script src="scrubFlow.js"></script>
+	<script src="recordFlow.js"></script>
 	<script src="uiFunc.js"></script>
 </body>
 </html>
