Allow same upload of file, fixed UI behaviours (basic)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<div id="videoContainer" style="display:none;position:relative;">
 		<div id="titleBar">
 			<p id="videoName">Buffering Video... Please Wait</p>
-			<div id="videoReset" style="display:none;visibility:hidden;margin-top: 4px;">
+			<div id="videoReset" style="display:none;margin-top: 4px;">
 				<a class="icontext" onclick="ResetToMainMenu()">	
 					<svg width="18" height="18" viewBox="0 0 256 256"><path d="M25 2a2 2 0 1 0 0 4c10.517 0 19 8.483 19 19s-8.483 19-19 19A18.97 18.97 0 0 1 6 25a18.93 18.93 0 0 1 6-13.855V15a2 2 0 1 0 4 0V4H5a2 2 0 1 0 0 4h4.525C4.907 12.21 2 18.272 2 25c0 12.679 10.321 23 23 23s23-10.321 23-23S37.679 2 25 2" transform="scale(5.12)" fill="#fff" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode:normal"/></svg>
 					Reset Video
