Added dev badge, and WIP notes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 	<div id="MainMenu">
 		<h1 style="margin-bottom: 0px;">ScrubV - Online Video Scrubber</h1>
    
+		<div>
+			<h3><marquee>WIP Tool (Work in Progress)</marquee></h3>
+			<span class="dev-badge">Build v0.2 - 25th March 2025.</span>
+			<p>Tool is not perfect, development still on-going. This project is not a high priority.</p>
+			<li>Resizing the window may lead to unexpected behaviours.</li>
+			<li>Short videos for best results when scrubbing</li>
+		</div>
+
 		<div class="button-container">
 			<label for="frameRateSelect" style="margin-right: 8px;">Frame Rate:</label>
 			<button id="btn15" data-selected="false" onclick="HandleFPSRate(15);">15</button>
