More view style edits

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</div>
 	</div>
   
+	<!-- style: Lazy simple way to allow refreshes to start at the beginning -->
 	<div id="videoContainer" style="display:none;position:relative;">
 		<div id="titleBar">
 			<p id="videoName">Buffering Video... Please Wait</p>
