--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 	<div id="MainMenu">
 		<h1 style="margin-bottom: 0px;">ScrubV - Online Video Scrubber</h1>
-   
+		<p>Video processing is client sided, not server sided.</p>
 		<div>
 			<h3><marquee>WIP Tool (Work in Progress)</marquee></h3>
-			<span class="dev-badge">Build v0.3 - 29th March 2025.</span>
+			<span class="dev-badge">Build v0.4 - 5th April 2025.</span>
 			<p>Tool is not perfect, development still on-going. This project is not a high priority.</p>
 			<li>Resizing the window may lead to unexpected behaviours.</li>
 			<li>Short videos for best results when scrubbing</li>
@@ -48,8 +48,8 @@
 			</div>	
 		</div>
         <canvas id="canvas"></canvas>
+		<div id="overlay">Buffering...</div>
         <div id="scrubber"></div>
-        <div id="overlay">Buffering...</div>
     </div>
     
 	<script src="scrubFlow.js"></script>
