Moving audio logic into separate file.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<p>Video processing is client sided, not server sided.</p>
 		<div>
 			<h3><marquee>WIP Tool (Work in Progress)</marquee></h3>
-			<span class="dev-badge">Build v0.4 - 5th April 2025.</span>
+			<span class="dev-badge">Build v0.4.1 - 25th May 2025.</span>
 			<p>Tool is not perfect, development still on-going. This project is not a high priority.</p>
 			<li>Resizing the window may lead to unexpected behaviours.</li>
 			<li>Short videos for best results when scrubbing</li>
@@ -55,5 +55,6 @@
 	<script src="scrubFlow.js"></script>
 	<script src="recordFlow.js"></script>
 	<script src="uiFunc.js"></script>
+	<script src="audioFlow.js"></script>
 </body>
 </html>
