--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Cache-Control" content="max-age=86400">
     <title>Video Scrubber</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +13,7 @@
 		<p>Video processing is client sided, not server sided.</p>
 		<div>
 			<h3><marquee>WIP Tool (Work in Progress)</marquee></h3>
-			<span class="dev-badge">Build v0.4.1 - 25th May 2025.</span>
+			<span class="dev-badge">Build v0.4.2 - 7th June 2025.</span>
 			<p>Tool is not perfect, development still on-going. This project is not a high priority.</p>
 			<li>Resizing the window may lead to unexpected behaviours.</li>
 			<li>Short videos for best results when scrubbing</li>
@@ -37,7 +38,7 @@
 		<div id="titleBar">
 			<p id="videoName">Buffering Video... Please Wait</p>
 			<div id="videoReset" style="display:none;margin-top: 4px;">
-				<a class="icontext" onclick="ResetToMainMenu()">	
+				<a class="icontext" onclick="TriggerReset()">	
 					<svg width="18" height="18" viewBox="0 0 256 256"><path d="M25 2a2 2 0 1 0 0 4c10.517 0 19 8.483 19 19s-8.483 19-19 19A18.97 18.97 0 0 1 6 25a18.93 18.93 0 0 1 6-13.855V15a2 2 0 1 0 4 0V4H5a2 2 0 1 0 0 4h4.525C4.907 12.21 2 18.272 2 25c0 12.679 10.321 23 23 23s23-10.321 23-23S37.679 2 25 2" transform="scale(5.12)" fill="#fff" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode:normal"/></svg>
 					Reset Video
 				</a>
@@ -52,9 +53,11 @@
         <div id="scrubber"></div>
     </div>
     
+	<script src="entrypoint.js"></script>
 	<script src="scrubFlow.js"></script>
 	<script src="recordFlow.js"></script>
 	<script src="uiFunc.js"></script>
 	<script src="audioFlow.js"></script>
+
 </body>
 </html>
